--- a/src/app/component/post-square/post-square.component.scss
+++ b/src/app/component/post-square/post-square.component.scss
@@ -8,6 +8,7 @@
   transition: background-color 3s ease, color 3s ease;
   cursor: pointer;
   user-select: none;
+  -webkit-user-select: none; /* Safari */
   overflow: hidden;
   perspective: 1000px;
   display: flex;
